# macaque-workflows

./: .pre-commit-config.yaml  README.md  pyproject.toml
macaque_utils/interfaces/: select_coreg.py
macaque_utils/workflows/: coregister.py  downsample.py
macaque_workflows/: __init__.py  utils.py
macaque_workflows/data/: params.json
macaque_workflows/interfaces/: gradunwarp.py  nmt.py  qc.py  resample.py
macaque_workflows/workflows/: __init__.py  coregister.py  downsample.py  gradient_nonlinearity.py  nmt.py
