[tool.poetry]
name = "macaque_workflows"
version = "0.0.1"
description = "Macaque utility workflows"
authors = ["Dan Gale <dan@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
natsort = "^8.4.0"
numpy = "^1.26.2"
scipy = "^1.11.4"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
scikit-image = "^0.22.0"
nipype = "^1.8.6"
nilearn = "^0.10.2"
nibabel = "^5.2.0"
pybids = "^0.16.4"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
bumpversion = "^0.6.0"
jupyter = "^1.0.0"
pre-commit = "^3.6.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
